# autograd_cpp

./: CMakeLists.txt  README.md  run_test.sh
include/autograd/: activations.hpp  backward.hpp  constant.hpp  graph_utils.hpp  ops.hpp  tensor.hpp  value.hpp
src/: activations.cpp  backward.cpp  constant.cpp  graph_utils.cpp  main.cpp  ops.cpp  tensor.cpp  value.cpp
tests/: README.md  test_activations.cpp  test_bias.cpp  test_finite_diffference_gradient.cpp  test_nn.cpp  test_tensor_ops.cpp  test_value_advanced.cpp  test_value_arithmetic.cpp  test_value_basic.cpp
